# Versus

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.js  package-lock.json  package.json  preload.js
Resources/UI/: ui.html
Resources/UI/ui/: app.html
Resources/UI/ui/css/: app.css
Resources/UI/ui/js/: app.js
Sources/: CMakeLists.txt  resource.rc
Sources/Editor/: Source.cpp  pch.hpp
Sources/Kernel/: Kernel.cpp  Kernel.hpp
Sources/Kernel/Graphics/: Renderer.cpp  Renderer.hpp
Sources/Kernel/Graphics/D3D/: ConstantBuffer.cpp  ConstantBuffer.hpp  ConstantBufferTypes.hpp  D3DClass.cpp  D3DClass.hpp  InputLayoutDescriptions.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Sources/Kernel/Graphics/D3D/Shaders/: PixelShader.cpp  PixelShader.hpp  VertexShader.cpp  VertexShader.hpp
Sources/Kernel/Graphics/ULImpl/: HtmlView.cpp  HtmlView.hpp  HtmlViewManager.cpp  HtmlViewManager.hpp
Sources/Kernel/Graphics/ULImpl/FileSystems/: FileSystemDefault.cpp  FileSystemDefault.hpp
Sources/Kernel/Graphics/ULImpl/FontLoaderAdapters/: FontLoaderWin.cpp  FontLoaderWin.hpp  TextAnalysisSource.cpp  TextAnalysisSource.hpp
Sources/Kernel/Graphics/ULImpl/GPUAdapters/: GPUDriverD3D11.cpp  GPUDriverD3D11.hpp  GPUDriverImpl.cpp  GPUDriverImpl.hpp  MapEntry.hpp
Sources/Kernel/Graphics/ULImpl/LoadListeners/: HtmlViewLoadListener.cpp  HtmlViewLoadListener.hpp
Sources/Kernel/Graphics/ULImpl/LoggerAdapters/: LoggerDefault.cpp  LoggerDefault.hpp
Sources/Kernel/Graphics/ULImpl/ViewListeners/: HtmlViewViewListener.cpp  HtmlViewViewListener.hpp
Sources/Kernel/Utility/: DirectoryHelper.cpp  DirectoryHelper.hpp  ErrorHandler.cpp  ErrorHandler.hpp  MimeTypeHelper.cpp  MimeTypeHelper.hpp  StringHelper.cpp  StringHelper.hpp  Timer.cpp  Timer.hpp
Sources/Kernel/Window/: Window.cpp  Window.hpp
Sources/Kernel/Window/Input/: Keyboard.cpp  Keyboard.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  Mouse.cpp  Mouse.hpp  MouseEvent.cpp  MouseEvent.hpp  MousePoint.hpp
native/: main.cpp
src/: game.html  index.html
src/css/: app.css  style.css
src/js/: Editor.js  PlayerController.js  VolumetricClouds.js  app.js  game.js  renderer.js
src/js/managers/: ControlsManager.js  EnvironmentManager.js  ObjectManager.js  PhysicsManager.js  PostprocessingManager.js  SceneManager.js  UIManager.js
src/js/utils/: creators.js  helpers.js  shaders.js
web/: app.html  main.js  preload.js
web/css/: app.css
web/js/: app.js
